[tool.poetry]
name = "multi-image"
version = "0.1.0"
description = ""
authors = ["Felipe Aguirre Martinez <felipe@prediktia.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cachesql = "^0.3.0"
python-dotenv = "^1.0.1"
marimo = "^0.4.0"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9"
matplotlib = "^3.8.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
